# MCPbox

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REVIEW_PROGRESS.md  SECURITY.md  THIRD_PARTY_LICENSES  docker-compose.yml  plan.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_openapi_import_fields.py  0002_consolidate_approval_sources.py  (+37 more)
backend/app/: __init__.py  main.py  mcp_only.py
backend/tests/: __init__.py  conftest.py  test_activity_api.py  test_activity_logger.py  test_admin_auth.py  test_approvals.py  test_audit.py  test_auth.py  test_circuit_breaker_api.py  test_cloudflare.py  test_config.py  test_credentials.py  test_crypto.py  test_dashboard_api.py  test_email_policy.py  test_execution_log_service.py  test_execution_logs.py  test_execution_logs_api.py  test_export_import.py  test_external_mcp_sources.py  test_health.py  test_internal.py  test_log_retention.py  test_mcp_gateway.py  test_mcp_management.py  test_mcp_oauth_client.py  test_metrics.py  test_module_settings_api.py  test_oauth.py  test_rate_limit.py  test_request_utils.py  test_retry.py  test_sandbox_client.py  test_sandbox_endpoints.py  test_security_fixes.py  test_security_headers.py  test_server_hosts.py  test_server_secrets.py  test_servers.py  test_service_token_cache.py  (+11 more)
sandbox/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
sandbox/app/: __init__.py  auth.py  deps_client.py  executor.py  main.py  mcp_client.py  mcp_session_pool.py  osv_client.py  package_installer.py  package_sync.py  pypi_client.py  registry.py  routes.py  safe_socket.py  socket_patch.py  ssrf.py  stdlib_detector.py
sandbox/tests/: __init__.py  conftest.py  test_auth.py  test_code_safety.py  test_concurrency_limit.py  test_execute.py  test_mcp_client.py  test_mcp_session_pool.py  test_module_traversal.py  test_package_installer.py  test_registry.py  test_response_size_limit.py  test_safe_socket.py  test_safety_clients.py  test_sandbox_escape.py  test_security_hardening.py  test_socket_patch.py  test_startup_validation.py  test_url_validation.py
(+297 files in other folders)
